tests/reference/asr-statement1-653abd8.stderr
ASR verify pass error: ASR verify: The variable in ArrayItem must be an array, not a scalar
 --> tests/statement1.f90:7:6
  |
7 | ti = dfloat(1,8)*9.0
  |      ^^^^^^^^^^^ failed here
